--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html, body {
+    background-color: #09141F;
+    color: white;
+    font-family: Consolas;
+}
