added fallback fonts for mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,6 +5,6 @@
 html, body {
     background-color: #09141F;
     color: white;
-    font-family: Consolas;
+    font-family: Consolas, 'Courier New', Courier, monospace;
     scroll-behavior: smooth;
 }
